[package]
name = "video-upsampler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "7.0.1"
image = "0.25.1"
log = "0.4.14"
colored = "2.0.0"
env_logger = "0.11.3"
tempfile = "3.2.0"
rayon = "1.5.0"
indicatif = "0.17.8"
num_cpus = "1.13.0"
crossbeam = "0.8.0"
rand = "0.8.4"